--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PhotoFolio Bootstrap Template - Contact</title>
+  <title>Lenny's Resume Portfolio - Contact</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -27,18 +27,39 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: PhotoFolio
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
-<body>
+<!-- Script to include the header -->
+<script>
+  // Function to fetch and insert the header content
+  function includeHeader() {
+    fetch("header.html")
+      .then(response => response.text())
+      .then(content => {
+        document.getElementById("header-container").innerHTML = content;
+      });
+  }
 
+  // Call the function to include the header on page load
+  includeHeader();
+</script>
+
+<!-- Script to include the footer -->
+<script>
+  // Function to fetch and insert the footer content
+  function includeFooter() {
+    fetch("footer.html")
+      .then(response => response.text())
+      .then(content => {
+        document.getElementById("footer-container").innerHTML = content;
+      });
+  }
+
+  // Call the function to include the footer on page load
+  includeFooter();
+</script>
+
+<body>
   <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
@@ -47,40 +68,38 @@
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <i class="bi bi-camera"></i>
-        <h1>PhotoFolio</h1>
+        <h1>Lenny</h1>
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li class="dropdown"><a href="#"><span>Gallery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li class="dropdown"><a href="#"><span>Projects</span> <i
+                class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="gallery.html">Nature</a></li>
-              <li><a href="gallery.html">People</a></li>
-              <li><a href="gallery.html">Architecture</a></li>
-              <li><a href="gallery.html">Animals</a></li>
-              <li><a href="gallery.html">Sports</a></li>
-              <li><a href="gallery.html">Travel</a></li>
-              <li class="dropdown"><a href="#"><span>Sub Menu</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+              <li><a href="swe.html">Software Engineer</a></li>
+              <li><a href="videography.html">Videographer</a></li>
+              <li><a href="modeling.html">Freelance Model</a></li>
+              <!-- <li class="dropdown"><a href="#"><span>Sub Menu</span> <i
+                    class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="#">Sub Menu 1</a></li>
                   <li><a href="#">Sub Menu 2</a></li>
                   <li><a href="#">Sub Menu 3</a></li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
           </li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html" class="active">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.github.com/lennyqd" class="github"><i class="bi bi-github"></i></a>
+        <a href="https://www.instagram.com/52lenny" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/lennyqd" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.tiktok.com/52lenny" class="tiktok"><i class="bi bi-tiktok"></i></a>
       </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
@@ -95,9 +114,8 @@
       <div class="container position-relative">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2>Contact</h2>
-            <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
-
+            <h2>Contact Me</h2>
+            <p>Just a few ways to connect with me!</p>
           </div>
         </div>
       </div>
@@ -114,7 +132,7 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Atlanta, Georgia</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -124,7 +142,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>LennyQD@GMail.com</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -133,8 +151,13 @@
             <div class="info-item d-flex">
               <i class="bi bi-phone flex-shrink-0"></i>
               <div>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55</p>
+                <h4>Social Media:</h4>
+                <p>
+                <a href="www.github.com/lennyqd" target="_blank">Github</a><br>
+                <a href="www.instagram.com/52lenny" target="_blank">Instagram</a><br>
+                <a href="www.linkedin.com/lennyqd" target="_blank">LinkedIn</a><br>
+                <a href="www.tiktok.com/52lenny" target="_blank">Tiktok</a>
+                </p>
               </div>
             </div>
           </div><!-- End Info Item -->
