--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PhotoFolio Bootstrap Template - About</title>
+  <title>Lenny's Resume Portfolio - About</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -27,64 +27,87 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: PhotoFolio
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
-<body>
+<!-- Script to include the header -->
+<script>
+  // Function to fetch and insert the header content
+  function includeHeader() {
+    fetch("header.html")
+      .then(response => response.text())
+      .then(content => {
+        document.getElementById("header-container").innerHTML = content;
+      });
+  }
 
-    <!-- ======= Header ======= -->
-    <header id="header" class="header d-flex align-items-center fixed-top">
-      <div class="container-fluid d-flex align-items-center justify-content-between">
-  
-        <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
-          <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=""> -->
-          <i class="bi bi-camera"></i>
-          <h1>Lenny</h1>
-        </a>
-  
-        <nav id="navbar" class="navbar">
-          <ul>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li class="dropdown"><a href="#"><span>Careers</span> <i
-                  class="bi bi-chevron-down dropdown-indicator"></i></a>
-              <ul>
-                <li><a href="gallery.html">Software Engineer</a></li>
-                <li><a href="gallery.html">Videography</a></li>
-                <li><a href="gallery.html">Freelance Modeling</a></li>
-                <!-- <li class="dropdown"><a href="#"><span>Sub Menu</span> <i
-                      class="bi bi-chevron-down dropdown-indicator"></i></a>
-                  <ul>
-                    <li><a href="#">Sub Menu 1</a></li>
-                    <li><a href="#">Sub Menu 2</a></li>
-                    <li><a href="#">Sub Menu 3</a></li>
-                  </ul>
-                </li> -->
-              </ul>
-            </li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav><!-- .navbar -->
-  
-        <div class="header-social-links">
-          <a href="www.github.com/lennyqd" class="github"><i class="bi bi-github"></i></a>
-          <a href="www.instagram.com/52lenny" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="www.linkedin.com/lennyqd" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-          <a href="www.tiktok.com/52lenny" class="tiktok"><i class="bi bi-tiktok"></i></a>
-        </div>
-        <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
-        <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
-  
+  // Call the function to include the header on page load
+  includeHeader();
+</script>
+
+<!-- Script to include the footer -->
+<script>
+  // Function to fetch and insert the footer content
+  function includeFooter() {
+    fetch("footer.html")
+      .then(response => response.text())
+      .then(content => {
+        document.getElementById("footer-container").innerHTML = content;
+      });
+  }
+
+  // Call the function to include the footer on page load
+  includeFooter();
+</script>
+
+
+
+<body>
+  <!-- ======= Header ======= -->
+  <header id="header" class="header d-flex align-items-center fixed-top">
+    <div class="container-fluid d-flex align-items-center justify-content-between">
+
+      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <i class="bi bi-camera"></i>
+        <h1>Lenny</h1>
+      </a>
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li class="dropdown"><a href="#"><span>Projects</span> <i
+                class="bi bi-chevron-down dropdown-indicator"></i></a>
+            <ul>
+              <li><a href="swe.html">Software Engineer</a></li>
+              <li><a href="videography.html">Videographer</a></li>
+              <li><a href="modeling.html">Freelance Model</a></li>
+              <!-- <li class="dropdown"><a href="#"><span>Sub Menu</span> <i
+                    class="bi bi-chevron-down dropdown-indicator"></i></a>
+                <ul>
+                  <li><a href="#">Sub Menu 1</a></li>
+                  <li><a href="#">Sub Menu 2</a></li>
+                  <li><a href="#">Sub Menu 3</a></li>
+                </ul>
+              </li> -->
+            </ul>
+          </li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav><!-- .navbar -->
+
+      <div class="header-social-links">
+        <a href="https://www.github.com/lennyqd" class="github"><i class="bi bi-github"></i></a>
+        <a href="https://www.instagram.com/52lenny" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/lennyqd" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.tiktok.com/52lenny" class="tiktok"><i class="bi bi-tiktok"></i></a>
       </div>
-    </header><!-- End Header -->
+      <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+
+    </div>
+  </header><!-- End Header -->
 
   <main id="main" data-aos="fade" data-aos-delay="1500">
 
@@ -94,10 +117,8 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>About</h2>
-            <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
-
-            <a class="cta-btn" href="contact.html">Available for hire</a>
-
+            <p>The information on this page will show how my varied experience in computer science, videography, and free-lance modeling enables me to address problems in a unique and meticulous way. I'm enthusiastic about technology, visual storytelling, and using my work to make a difference.
+            </p>
           </div>
         </div>
       </div>
@@ -110,144 +131,54 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <br><br><br>
+            <img src="assets/img/profile-img1.jpg" class="img-fluid" alt="">
+
           </div>
           <div class="col-lg-5 content">
-            <h2>Professional Photographer from New York</h2>
-            <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
-              </div>
+            <h2>Computer Scientist with a Passion for Technology</h2>
+          <p class="py-3">
+            During my studies, I undertook various projects in different coding languages, gaining valuable experience in the technical world. I have a strong foundation in software development, algorithms, and problem-solving, making me adept at tackling complex challenges in the tech industry.
+          </p>
+          <p class="m-0">
+            My passion for technology drives me to stay updated with the latest trends in the field, ensuring that I am always equipped with cutting-edge skills to create innovative solutions.
+          </p>
+          <br>
+          <h2>Passionate Videographer and Founder of "Capture the People"</h2>
+          <p class="fst-italic py-3">
+            Apart from my computer science journey, I am also a dedicated videographer, with a strong focus on capturing precious moments and creating captivating visuals.
+          </p>
+          <div class="row">
+            <div class="col-lg-6">
             </div>
-            <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
-            <p class="m-0">
-              Recusandae est praesentium consequatur eos voluptatem. Vitae dolores aliquam itaque odio nihil. Neque ut neque ut quae voluptas. Maxime corporis aut ut ipsum consequatur. Repudiandae sunt sequi minus qui et. Doloribus molestiae officiis.
-              Soluta eligendi fugiat omnis enim. Numquam alias sint possimus eveniet ad. Ratione in earum eum magni totam.
-            </p>
+            <!-- You can add more details about your videography background here -->
+          </div>
+          <p class="py-3">
+            What started as a photography and videography venture for weddings and events evolved into a full-fledged video production company for music artists called Capture the People, the idea to record the moments with the community and all around it. Capture the People gained popularity on social media, attracting numerous music artists who sought to collaborate on music video projects.
+          </p>
+          <p class="m-0">
+            My experience in videography has allowed me to master the art of storytelling through visuals. I am committed to creating compelling videos that not only showcase the talent of the artists but also resonate with their audience, spreading their music to a wider audience.
+          </p>
+          <br>
+          <h2>Freelance Model with Certified Professional Model (CPM) Credential</h2>
+          <p class="fst-italic py-3">
+            Alongside my videography pursuits, I am also an experienced freelance model, mastering the art of posing and showcasing confidence in front of the camera.
+          </p>
+          <div class="row">
+            <div class="col-lg-6">
+            </div>
+            <!-- You can add more details about your modeling background here -->
+          </div>
+          <p class="py-3">
+            My journey in modeling started as a means to learn more about editing skills for my photography and videography projects. As I gained more experience, I honed my posing techniques and became well-versed in presenting myself confidently and professionally.
+          </p>
+          <p class="m-0">
+            The Certified Professional Model (CPM) certification, earned through the National Association of Professional Models (NAPM), is a testament to my dedication to success in the modeling industry. It covers essential topics such as marketing, branding, portfolio development, and business management, equipping me with the skills to excel in my modeling endeavors.
+          </p>
           </div>
         </div>
-
       </div>
     </section><!-- End About Section -->
-
-    <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
-      <div class="container">
-
-        <div class="section-header">
-          <h2>Testimonials</h2>
-          <p>What they are saying</p>
-        </div>
-
-        <div class="slides-3 swiper">
-          <div class="swiper-wrapper">
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                  <h3>Saul Goodman</h3>
-                  <h4>Ceo &amp; Founder</h4>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                  <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                  <h3>Matt Brandon</h3>
-                  <h4>Freelancer</h4>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                  <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-    </section><!-- End Testimonials Section -->
-
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
