--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+
 </head>
 
 <!-- Script to include the header -->
@@ -119,7 +120,7 @@
           <h2>Welcome! I'm <span>Lenny</span> - Soon to be Computer Science Graduate based in Atlanta, Georgia</h2>
 
           <!-- <p>empty text</p> -->
-          <a href="about.html" class="btn-get-started">Learn More About Me</a>
+          <a href="./about.html" class="btn-get-started">Learn More About Me</a>
         </div>
       </div>
     </div>
@@ -171,8 +172,13 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <div id="footer-container"></div>
-  <!-- End Footer -->
+<footer id="footer" class="footer">
+  <div class="container">
+    <div class="copyright">
+      &copy; Copyright <strong><span>Lenny Do</span></strong>. All Rights Reserved
+    </div>
+  </div>
+</footer><!-- End Footer -->
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
