--- a/contact.html
+++ b/contact.html
@@ -29,42 +29,12 @@
   <link href="assets/css/main.css" rel="stylesheet">
 </head>
 
-<!-- Script to include the header -->
-<script>
-  // Function to fetch and insert the header content
-  function includeHeader() {
-    fetch("header.html")
-      .then(response => response.text())
-      .then(content => {
-        document.getElementById("header-container").innerHTML = content;
-      });
-  }
-
-  // Call the function to include the header on page load
-  includeHeader();
-</script>
-
-<!-- Script to include the footer -->
-<script>
-  // Function to fetch and insert the footer content
-  function includeFooter() {
-    fetch("footer.html")
-      .then(response => response.text())
-      .then(content => {
-        document.getElementById("footer-container").innerHTML = content;
-      });
-  }
-
-  // Call the function to include the footer on page load
-  includeFooter();
-</script>
-
 <body>
   <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
+      <a href="./" class="logo d-flex align-items-center  me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <i class="bi bi-camera"></i>
@@ -73,14 +43,14 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="./" class="active">Home</a></li>
+          <li><a href="./about">About</a></li>
           <li class="dropdown"><a href="#"><span>Projects</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="swe.html">Software Engineer</a></li>
-              <li><a href="videography.html">Videographer</a></li>
-              <li><a href="modeling.html">Freelance Model</a></li>
+              <li><a href="./swe">Software Engineer</a></li>
+              <li><a href="./videography">Videographer</a></li>
+              <li><a href="./modeling">Freelance Model</a></li>
               <!-- <li class="dropdown"><a href="#"><span>Sub Menu</span> <i
                     class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
@@ -91,7 +61,7 @@
               </li> -->
             </ul>
           </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="./contact">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
