--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <script>
   // Function to fetch and insert the header content
   function includeHeader() {
-    fetch("header.html")
+    fetch("./header")
       .then(response => response.text())
       .then(content => {
         document.getElementById("header-container").innerHTML = content;
@@ -50,7 +50,7 @@
 <script>
   // Function to fetch and insert the footer content
   function includeFooter() {
-    fetch("footer.html")
+    fetch("./footer")
       .then(response => response.text())
       .then(content => {
         document.getElementById("footer-container").innerHTML = content;
@@ -66,7 +66,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
+      <a href="./" class="logo d-flex align-items-center  me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <i class="bi bi-camera"></i>
@@ -75,14 +75,14 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="./" class="active">Home</a></li>
+          <li><a href="./about">About</a></li>
           <li class="dropdown"><a href="#"><span>Projects</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="swe.html">Software Engineer</a></li>
-              <li><a href="videography.html">Videographer</a></li>
-              <li><a href="modeling.html">Freelance Model</a></li>
+              <li><a href="./swe">Software Engineer</a></li>
+              <li><a href="./videography">Videographer</a></li>
+              <li><a href="./modeling">Freelance Model</a></li>
               <!-- <li class="dropdown"><a href="#"><span>Sub Menu</span> <i
                     class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
@@ -93,7 +93,7 @@
               </li> -->
             </ul>
           </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="./contact">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -120,7 +120,7 @@
           <h2>Welcome! I'm <span>Lenny</span> - Soon to be Computer Science Graduate based in Atlanta, Georgia</h2>
 
           <!-- <p>empty text</p> -->
-          <a href="./about.html" class="btn-get-started">Learn More About Me</a>
+          <a href="./about" class="btn-get-started">Learn More About Me</a>
         </div>
       </div>
     </div>
@@ -137,7 +137,7 @@
             <div class="gallery-item h-100">
               <div class="gallery-click">
                 <p>Software Engineer</p>
-                <a href="swe.html" class="details-link">
+                <a href="./swe" class="details-link">
                   <img src="assets/img/gallery/soft1.jpg" class="img-fluid" alt="">
                 </a>
               </div>
@@ -148,7 +148,7 @@
             <div class="gallery-item h-100">
               <div class="gallery-click">
                 <p>Videographer</p>
-                <a href="videography.html" class="details-link">
+                <a href="./videography" class="details-link">
                   <img src="assets/img/gallery/video1.jpg" class="img-fluid" alt="">
                 </a>
               </div>
@@ -159,7 +159,7 @@
             <div class="gallery-item h-100">
               <div class="gallery-click">
                 <p>Freelance Model</p>
-                <a href="modeling.html" class="details-link">
+                <a href="./modeling" class="details-link">
                   <img src="assets/img/gallery/model1.jpg" class="img-fluid" alt="">
                 </a>
               </div>
