--- a/videography.html
+++ b/videography.html
@@ -228,26 +228,26 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <video id="video-1" class="d-block" controls autoplay muted>
-                <source src="assets\img\gallery\video\v1.mp4" type="video/mp4">
+            <video id="video-1" class="d-block" controls autoplay muted loop>
+                <source src="https://github.com/lennyqd/lennywebsite/blob/main/assets/img/gallery/video/v1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
         <div class="carousel-item">
-            <video id="video-2" class="d-block" controls autoplay muted>
-                <source src="assets\img\gallery\video\v2.mp4" type="video/mp4">
+            <video id="video-2" class="d-block" controls autoplay muted loop>
+                <source src="https://github.com/lennyqd/lennywebsite/blob/main/assets/img/gallery/video/v2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
         <div class="carousel-item">
-            <video id="video-3" class="d-block" controls autoplay muted>
-                <source src="assets\img\gallery\video\v3.mp4" type="video/mp4">
+            <video id="video-3" class="d-block" controls autoplay muted loop>
+                <source src="https://github.com/lennyqd/lennywebsite/blob/main/assets/img/gallery/video/v3.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
         <div class="carousel-item">
-          <video id="video-4" class="d-block" controls autoplay muted>
-              <source src="assets\img\gallery\video\v4.mp4" type="video/mp4">
+          <video id="video-4" class="d-block" controls autoplay muted loop>
+                <source src="https://github.com/lennyqd/lennywebsite/blob/main/assets/img/gallery/video/v4.mp4" type="video/mp4">
               Your browser does not support the video tag.
           </video>
       </div>
